ロボットが外部から制御されているときはVelodyneパケットをユニキャストするように。その他最適化。

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,6 +85,27 @@ bAutoEnabled=False
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/Engine.RendererSettings]
+r.SupportLowQualityLightmaps=False
+r.Shadow.UnbuiltPreviewInGame=False
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+-TargetedRHIs=PCD3D_SM5
+-TargetedRHIs=PCD3D_SM4
++TargetedRHIs=PCD3D_SM5
+DefaultGraphicsRHI=DefaultGraphicsRHI_Default
+MinimumOSVersion=MSOS_Vista
+AudioDevice=
+AudioSampleRate=48000
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=1
+AudioMaxChannels=0
+AudioNumSourceWorkers=4
+SpatializationPlugin=
+ReverbPlugin=
+OcclusionPlugin=
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
