スタート位置、確認走行区間終端付近、市役所内東側を調整。

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/VTC2018")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="VTC2018GameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="VTC2018Character")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=200.000000))
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
