VTC2019: Prepare for packaging build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6D69AE2942AD63FEA3BE098040F52905
-ProjectName=Third Person Game Template
+ProjectName=VTC2019
 
 [StartupActions]
 bAddPacks=True
@@ -45,5 +45,3 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/zmque")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
-
