--- a/Config/DefaultProject.ini
+++ b/Config/DefaultProject.ini
@@ -1,7 +1,10 @@
 
 [/Script/Cage.IntensityResponseParams]
-DefaultResponse=(Metaric=0.100000,Roughness=0.500000,Albedo=0.700000,Retroreflection=0.000000)
-+PerSurfaceTypeResponse=(SurfaceType=SurfaceType2,Metaric=0.000000,Roughness=0.000000,Albedo=0.847619,Retroreflection=0.933333)
-+PerSurfaceTypeResponse=(SurfaceType=SurfaceType3,Metaric=0.652381,Roughness=0.047619,Albedo=0.019048,Retroreflection=0.000000)
+DefaultResponse=(Specular=0.250000,Roughness=0.300000,Albedo=0.550000,Retroreflection=0.000000)
++PerSurfaceTypeResponse=(SurfaceType=SurfaceType2,Specular=0.100000,Roughness=0.000000,Albedo=0.847619,Retroreflection=0.933333)
++PerSurfaceTypeResponse=(SurfaceType=SurfaceType3,Specular=0.800000,Roughness=0.100000,Albedo=0.080000,Retroreflection=0.000000)
++PerSurfaceTypeResponse=(SurfaceType=SurfaceType1,Specular=0.100000,Roughness=0.800000,Albedo=0.500000,Retroreflection=0.000000)
++PerSurfaceTypeResponse=(SurfaceType=SurfaceType4,Specular=0.150000,Roughness=0.700000,Albedo=0.250000,Retroreflection=0.000000)
++PerSurfaceTypeResponse=(SurfaceType=SurfaceType5,Specular=0.100000,Roughness=0.700000,Albedo=0.080000,Retroreflection=0.000000)
 
 
