--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/VTC2018/VTC.VTC
 EditorStartupMap=/Game/Maps/VTC2018/VTC.VTC
-GlobalDefaultGameMode=/Game/Blueprints/VTC2018GameMode.VTC2018GameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/VTCGameMode.VTCGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -155,5 +155,3 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Asphalt")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
