--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6D69AE2942AD63FEA3BE098040F52905
-ProjectName=VTC2019
+ProjectName=VTC
+Description=VTC
 
 [StartupActions]
 bAddPacks=True
