--- a/VTC.uproject
+++ b/VTC.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "VTC2018",
+			"Name": "VTC",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
@@ -30,6 +30,11 @@
 		{
 			"Name": "SteamVR",
 			"Enabled": false
+		},
+		{
+			"Name": "RiderSourceCodeAccess",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/35b0d39e4cee4bccb2dabf04a4c911bb"
 		}
 	]
 }
