Script to set PM on specified asset

--- a/VTC.uproject
+++ b/VTC.uproject
@@ -35,6 +35,14 @@
 			"Name": "RiderSourceCodeAccess",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/35b0d39e4cee4bccb2dabf04a4c911bb"
+		},
+		{
+			"Name": "PythonScriptPlugin",
+			"Enabled": true
+		},
+		{
+			"Name": "EditorScriptingUtilities",
+			"Enabled": true
 		}
 	]
 }
