--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -155,3 +155,7 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Asphalt")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+[/Script/Engine.StreamingSettings]
+s.AsyncLoadingUseFullTimeLimit=True
+
