--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -153,6 +153,7 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType3,Name="Glass")
 +PhysicalSurfaces=(Type=SurfaceType4,Name="RoadSurface")
 +PhysicalSurfaces=(Type=SurfaceType5,Name="Asphalt")
++PhysicalSurfaces=(Type=SurfaceType6,Name="Asphalt-white")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
