Disable static lighting to remove lightmaps

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -89,6 +89,9 @@ RuntimeGeneration=Dynamic
 [/Script/Engine.RendererSettings]
 r.SupportLowQualityLightmaps=False
 r.Shadow.UnbuiltPreviewInGame=False
+r.ForwardShading=False
+r.LightPropagationVolume=True
+r.AllowStaticLighting=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=Default
