--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,8 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="../../../../../../Users/yos/work/VTC-Packaged")
+BuildTarget=
+StagingDirectory=(Path="C:/Users/yos/work/Unreal Packaged/TC2020")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -18,11 +19,16 @@ BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
+bUseIoStore=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
@@ -33,16 +39,39 @@ IncludeCrashReporter=False
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=True
 bCompressed=True
-bEncryptIniFiles=False
-bEncryptPakIndex=False
-bSkipEditorContent=False
+bSkipEditorContent=True
 bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/VTC2018/VTC")
 +DirectoriesToAlwaysCook=(Path="/Cage")
 +DirectoriesToAlwaysCook=(Path="/PxArticulationLink")
 +DirectoriesToAlwaysCook=(Path="/zmque")
-bNativizeBlueprintAssets=False
-bNativizeOnlySelectedBlueprints=False
++DirectoriesToNeverCook=(Path="/Game/Maps/Voxel")
+
